feat: completar repositorio JDBC com atualizar e remover + testes